--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.1.0-rc.0",
+    "bignumber.js": "^9.0.0",
     "bs58": "^4.0.1",
     "multihashes": "^0.4.19"
   },
