--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "test"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^3.1.0-rc.0",
+    "@openzeppelin/contracts": "^3.1.0",
     "bignumber.js": "^9.0.0",
     "bs58": "^4.0.1",
-    "idetix-utils": "^1.0.0",
-    "multihashes": "^0.4.19"
+    "idetix-utils": "^1.0.6",
+    "multihashes": "^0.4.21"
   },
   "devDependencies": {},
   "scripts": {
