--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "@openzeppelin/contracts": "^3.1.0",
     "bignumber.js": "^9.0.0",
     "bs58": "^4.0.1",
-    "idetix-utils": "^1.0.6",
+    "idetix-utils": "^1.0.12",
     "multihashes": "^0.4.21"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "truffle test test/AftermarketNonFungibleDynamicSelling.js"
   },
   "repository": {
     "type": "git",
