refactor identity contract, integrated into event contract and updated tests

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "truffle test test/AftermarketNonFungibleDynamicSelling.js"
+    "test": "truffle test test/EventIdentity.js"
   },
   "repository": {
     "type": "git",
