--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "bs58": "^4.0.1",
     "idetix-utils": "^1.0.12",
     "multihashes": "^0.4.21",
+    "truffle-assertions": "^0.9.2",
     "truffle-contract-size": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "truffle test test/EventIdentity.js"
+    "test": "truffle test test/PresaleOverflowFungible.js --network ganachecli"
   },
   "repository": {
     "type": "git",
