--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@openzeppelin/contracts": "^3.2.0",
     "bignumber.js": "^9.0.1",
     "bs58": "^4.0.1",
+    "faker": "^5.1.0",
     "idetix-utils": "^1.0.14",
+    "ipfs-http-client": "^47.0.1",
     "multihashes": "^0.4.21",
     "truffle-assertions": "^0.9.2",
     "truffle-contract-size": "^2.0.0"
